--- a/src/PhotoFolder.Wpf/Views/ConfigureFolderDialog.xaml
+++ b/src/PhotoFolder.Wpf/Views/ConfigureFolderDialog.xaml
@@ -1,11 +1,37 @@
-﻿<UserControl x:Class="PhotoFolder.Wpf.Views.ConfigureFolderDialog"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"  prism:ViewModelLocator.AutoWireViewModel="True"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+﻿<UserControl
+    x:Class="PhotoFolder.Wpf.Views.ConfigureFolderDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
+    Width="500"
+    d:DataContext="{d:DesignInstance viewModels:ConfigureFolderDialogViewModel}"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    prism:ViewModelLocator.AutoWireViewModel="True"
+    mc:Ignorable="d">
+    <StackPanel>
+        <StackPanel Margin="16">
+            <TextBlock Text="Photo Path Template" />
+            <TextBox Margin="0,2,0,0" Text="{Binding PathTemplate}" />
+        </StackPanel>
+        <Border
+            Background="#FFF6F6F6"
+            BorderBrush="Gainsboro"
+            BorderThickness="0,1,0,0">
+            <StackPanel
+                Margin="16,8"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <Button Content="Cancel" IsCancel="True" />
+                <Button
+                    Margin="16,0,0,0"
+                    Command="{Binding ConfigureCommand}"
+                    Content="Configure"
+                    IsDefault="True" />
+            </StackPanel>
+        </Border>
+    </StackPanel>
 </UserControl>
