--- a/src/PhotoFolder.Wpf/Views/SynchronizeFolderView.xaml
+++ b/src/PhotoFolder.Wpf/Views/SynchronizeFolderView.xaml
@@ -18,23 +18,41 @@
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             Orientation="Vertical">
-            <TextBlock>
-                <TextBlock.Style>
-                    <Style TargetType="TextBlock">
-                        <Style.Triggers>
-                            <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.Scanning}">
-                                <Setter Property="Text" Value="Scanning..." />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.Synchronizing}">
-                                <Setter Property="Text" Value="Synchronizing..." />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.IndexingNewFiles}">
-                                <Setter Property="Text" Value="Indexing new files..." />
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </TextBlock.Style>
-            </TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock>
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.Scanning}">
+                                    <Setter Property="Text" Value="Scanning..." />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.Synchronizing}">
+                                    <Setter Property="Text" Value="Synchronizing..." />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.IndexingNewFiles}">
+                                    <Setter Property="Text" Value="Indexing new files..." />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+                <TextBlock Margin="2,0,0,0">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Visibility" Value="Collapsed" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.IndexingNewFiles}">
+                                    <Setter Property="Visibility" Value="Visible" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                    <Run Text="(" /><Run Text="{Binding State.ProcessedFiles, Mode=OneWay}" />
+                    <Run Text="/" />
+                    <Run Text="{Binding State.TotalFiles, Mode=OneWay}" />
+                    <Run Text="files)" />
+                </TextBlock>
+            </StackPanel>
             <mah:MetroProgressBar MinWidth="300" Margin="0,2,0,0">
                 <mah:MetroProgressBar.Style>
                     <Style TargetType="mah:MetroProgressBar">
@@ -46,7 +64,7 @@
                                 <Setter Property="IsIndeterminate" Value="True" />
                             </DataTrigger>
                             <DataTrigger Binding="{Binding State.Status}" Value="{x:Static workers:SynchronizeIndexStatus.IndexingNewFiles}">
-                                <Setter Property="Value" Value="{Binding State.Progress}" />
+                                <Setter Property="Value" Value="{Binding State.Progress, Mode=OneWay}" />
                                 <Setter Property="Maximum" Value="1" />
                             </DataTrigger>
                         </Style.Triggers>
