--- a/src/PhotoFolder.Wpf/Views/PhotoFolderImportView.xaml
+++ b/src/PhotoFolder.Wpf/Views/PhotoFolderImportView.xaml
@@ -5,6 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
+    d:DataContext="{d:DesignInstance viewModels:PhotoFolderImportViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
