--- a/src/PhotoFolder.Wpf/Views/PhotoFolderView.xaml
+++ b/src/PhotoFolder.Wpf/Views/PhotoFolderView.xaml
@@ -6,6 +6,8 @@
     xmlns:local="clr-namespace:PhotoFolder.Wpf"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
+    xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
+    d:DataContext="{d:DesignInstance viewModels:PhotoFolderViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
