--- a/src/PhotoFolder.Wpf/Resources/VisualStudioIcons.xaml
+++ b/src/PhotoFolder.Wpf/Resources/VisualStudioIcons.xaml
@@ -134,4 +134,105 @@
             </Rectangle.Fill>
         </Rectangle>
     </Viewbox>
+
+    <Viewbox
+        x:Key="FileCollectionIcon"
+        Width="16"
+        Height="16"
+        x:Shared="False">
+        <Rectangle Width="16" Height="16">
+            <Rectangle.Fill>
+                <DrawingBrush>
+                    <DrawingBrush.Drawing>
+                        <DrawingGroup>
+                            <DrawingGroup.Children>
+                                <GeometryDrawing Brush="{DynamicResource HaloBrush}" Geometry="F1M13.5469,0L7.9999,0C7.0309,0,5.9999,0.701,5.9999,2L1.9999,2C1.0309,2,-9.99999999997669E-05,2.701,-9.99999999997669E-05,4L-9.99999999997669E-05,12C-9.99999999997669E-05,13.299,1.0309,14,1.9999,14L3.9999,14C3.9999,15.299,5.0309,16,5.9999,16L11.9999,16C13.2989,16,13.9999,14.97,13.9999,14L13.9999,12C15.2989,12,15.9999,10.97,15.9999,10L15.9999,2.062z" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush2}" Geometry="F1M12,9L12,10 12,14 6,14 6,6 10,6 10,8 12,8z M10.625,5L5.965,5C5.965,5,5,5,5,6L5,14C5,15,5.965,15,5.965,15L11.965,15C12.965,15,13,14,13,14L13,7.137z" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush2}" Geometry="F1M4,12L2,12 2,4 6,4 7.736,4 6.625,3 1.965,3C1.965,3,1,3,1,4L1,12C1,13,1.965,13,1.965,13L4,13z" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush2}" Geometry="F1M12.625,1L7.965,1C7.965,1,7,1,7,2L7.547,2 8,2.381 8,2 12,2 12,4 14,4 14,5 14,6 14,6.062 14,10 14,10.995C14.962,10.97,15,10,15,10L15,3.137z" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush1}" Geometry="F1M6,6L10,6 10,7.96 12,7.996 12,14 6,14z" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush1}" Geometry="F1M4,6C4,4.701,5.031,4,6,4L2,4 2,12 4,12z" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush1}" Geometry="F1M12,3.96L12,2 8,2 8,2.381 9.927,4 11.547,4 14,6.062 14,3.996z" />
+                            </DrawingGroup.Children>
+                        </DrawingGroup>
+                    </DrawingBrush.Drawing>
+                </DrawingBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+    </Viewbox>
+
+    <Viewbox
+        x:Key="ImageGroupIcon"
+        Width="16"
+        Height="16"
+        x:Shared="False">
+        <Rectangle Width="16" Height="16">
+            <Rectangle.Fill>
+                <DrawingBrush>
+                    <DrawingBrush.Drawing>
+                        <DrawingGroup>
+                            <DrawingGroup.Children>
+                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                <GeometryDrawing Brush="{DynamicResource HaloBrush}" Geometry="F1M2,3.001L2,1 15,1 15,14 13,14 13,15 1,15 1,3.001z" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush1}" Geometry="F1M2,4L2,10 3,8.958 3,5 11,5 11,9.891 11,10.2 12,11 12,4z M14,13L13,13 13,3 3,3 3,2 14,2" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush2}" Geometry="F1M8.1953,8.3906C7.5353,8.3906 7.0003,7.8556 7.0003,7.1956 7.0003,6.5356 7.5353,5.9996 8.1953,5.9996 8.8553,5.9996 9.3903,6.5356 9.3903,7.1956 9.3903,7.8556 8.8553,8.3906 8.1953,8.3906 M3.0003,4.9996L3.0003,8.9686 5.0003,6.7496 7.7183,10.2966 9.5003,8.9066 11.0003,9.8906 11.0003,4.9996z" />
+                                <GeometryDrawing Brush="#FFC17C1A" Geometry="F1M9.3906,7.1953C9.3906,7.8553 8.8556,8.3903 8.1956,8.3903 7.5356,8.3903 6.9996,7.8553 6.9996,7.1953 6.9996,6.5353 7.5356,6.0003 8.1956,6.0003 8.8556,6.0003 9.3906,6.5353 9.3906,7.1953" />
+                                <GeometryDrawing Brush="#FF1AA1E2" Geometry="F1M5,6.8735L7.688,10.3595 9.5,9.0005 12,11.0005 12,14.0005 2,14.0005 2,10.0005z" />
+                            </DrawingGroup.Children>
+                        </DrawingGroup>
+                    </DrawingBrush.Drawing>
+                </DrawingBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+    </Viewbox>
+
+    <Viewbox
+        x:Key="ProjectFolderOpenIcon"
+        Width="16"
+        Height="16"
+        x:Shared="False">
+        <Rectangle Width="16" Height="16">
+            <Rectangle.Fill>
+                <DrawingBrush>
+                    <DrawingBrush.Drawing>
+                        <DrawingGroup>
+                            <DrawingGroup.Children>
+                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16L0,16 0,0 16,0z" />
+                                <GeometryDrawing Brush="#FFF5F5F5" Geometry="F1M1.9998,7L1.9998,10 0.3818,10 3.3818,16 15.9998,16 11.4998,10 5.0008,10 5.0008,7z" />
+                                <GeometryDrawing Brush="{DynamicResource HaloBrush}" Geometry="F1M14,4L8,4 8,2.311 5.963,0 1.999,0C1.029,0,0,0.701,0,2L0,7C0,8.299,1,9,2,9L2,10 0.381,10 3.381,16 14,16C14.969,16,16,15.299,16,14L16,6C16,4.701,14.969,4,14,4" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush2}" Geometry="F1M6,5L6,5 6,7 2,7 2,2 5,2 5,3 6,3z M5.312,1L1.963,1C1.963,1,1,1,1,2L1,7C1,8,1.964,8,1.964,8L5.964,8C6.964,8,7,7,7,7L7,3.137z" />
+                                <GeometryDrawing Brush="#FFDCB679" Geometry="F1M4,11L4,9 3,9 3,11 1.996,11 3.996,15 13.996,15 10.996,11z" />
+                                <GeometryDrawing Brush="#FFDCB679" Geometry="F1M13.9961,5L8.0001,5 8.0001,6 14.0001,6 14.0001,15C14.0001,15,15.0001,15,15.0001,14L15.0001,6C15.0001,5,13.9961,5,13.9961,5" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush1}" Geometry="F1M4,11L4,8 8,8 9,6 14,6 14,14.969 11,11z" />
+                            </DrawingGroup.Children>
+                        </DrawingGroup>
+                    </DrawingBrush.Drawing>
+                </DrawingBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+    </Viewbox>
+
+    <Viewbox
+        x:Key="OpenFileIcon"
+        Width="16"
+        Height="16"
+        x:Shared="False">
+        <Rectangle Width="16" Height="16">
+            <Rectangle.Fill>
+                <DrawingBrush>
+                    <DrawingBrush.Drawing>
+                        <DrawingGroup>
+                            <DrawingGroup.Children>
+                                <GeometryDrawing Brush="#00FFFFFF" Geometry="F1M16,16.018L0,16.018 0,0.0180000000000007 16,0.0180000000000007z" />
+                                <GeometryDrawing Brush="{DynamicResource HaloBrush}" Geometry="F1M16,4.3965L16,16.0175 3,16.0175 3,9.9675C1.308,9.7215 0,8.2765 0,6.5175 0,4.7595 1.308,3.3135 3,3.0685L3,0.0175000000000001 5.711,0.0175000000000001 5.729,0.000499999999999723 5.746,0.0175000000000001 11.621,0.0175000000000001z" />
+                                <GeometryDrawing Brush="{DynamicResource LightBrush2}" Geometry="F1M10,6.0176L10,4.7636 5.729,9.0356 5,8.3066 5,14.0176 14,14.0176 14,6.0176z M10,4.2716L10,2.0176 7.746,2.0176z M13.793,5.0176L11,5.0176 11,2.2246z" />
+                                <GeometryDrawing Brush="{DynamicResource DarkBrush1}" Geometry="F1M6.7464,1.0177L7.7464,2.0177 9.9994,2.0177 9.9994,6.0167 14.0004,6.0167 14.0004,14.0177 5.0004,14.0177 5.0004,10.0177 3.9994,10.0177 3.9994,15.0167 15.0004,15.0167 15.0004,4.8107 11.2064,1.0177z M10.9994,2.2247L13.7934,5.0177 10.9994,5.0177z" />
+                                <GeometryDrawing Brush="{DynamicResource IconBlueBrush1}" Geometry="F1M8.832,4.5176L5.728,7.6216 5.021,6.9136 6.918,5.0176 3.5,5.0176C2.673,5.0176 2,5.6906 2,6.5176 2,7.3446 2.673,8.0176 3.5,8.0176L3.5,9.0176C2.122,9.0176 1,7.8966 1,6.5176 1,5.1396 2.122,4.0176 3.5,4.0176L6.918,4.0176 5.021,2.1216 5.728,1.4136z" />
+                            </DrawingGroup.Children>
+                        </DrawingGroup>
+                    </DrawingBrush.Drawing>
+                </DrawingBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+    </Viewbox>
 </ResourceDictionary>
