--- a/src/PhotoFolder.Wpf/Views/DecisionManagerDetailsView.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionManagerDetailsView.xaml
@@ -2,8 +2,10 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionManagerDetailsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:PhotoFolder.Wpf.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="clr-namespace:PhotoFolder.Wpf.ViewModels.Models"
     xmlns:mvvm="http://prismlibrary.com/"
     xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
     d:DataContext="{d:DesignInstance viewModels:DecisionManagerDetailsViewModel}"
@@ -11,5 +13,178 @@
     d:DesignWidth="800"
     mvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
-    <Grid />
+    <UserControl.Resources>
+        <converters:FormatBytesConverter x:Key="FormatBytesConverter" />
+
+        <Thickness x:Key="PropertiesMargin" Top="4" />
+        <GridLength x:Key="PropertiesLabelWidth">70</GridLength>
+    </UserControl.Resources>
+    <StackPanel Orientation="Vertical">
+        <Border
+            HorizontalAlignment="Center"
+            BorderBrush="Black"
+            BorderThickness="1">
+            <Border
+                HorizontalAlignment="Center"
+                BorderBrush="White"
+                BorderThickness="1">
+                <Image
+                    Height="200"
+                    RenderOptions.BitmapScalingMode="HighQuality"
+                    RenderOptions.EdgeMode="Aliased"
+                    Source="{Binding Thumbnail}"
+                    Stretch="Uniform" />
+            </Border>
+        </Border>
+        <StackPanel Margin="16" Orientation="Vertical">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Filename:" />
+                <TextBlock
+                    Grid.Column="1"
+                    Text="{Binding Selection.Decision.Issue.File.Filename}"
+                    TextTrimming="CharacterEllipsis" />
+            </Grid>
+            <Grid Margin="{StaticResource PropertiesMargin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Outside:" />
+                <TextBlock Grid.Column="1">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Selection.Decision.Issue.File.IsRelativeFilename}" Value="true">
+                                    <Setter Property="Text" Value="No" />
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding Selection.Decision.Issue.File.IsRelativeFilename}" Value="false">
+                                    <Setter Property="Text" Value="Yes" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
+            </Grid>
+            <Grid Margin="{StaticResource PropertiesMargin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="File Hash:" />
+                <TextBlock
+                    Grid.Column="1"
+                    Text="{Binding Selection.Decision.Issue.File.Hash}"
+                    TextTrimming="CharacterEllipsis" />
+            </Grid>
+            <Grid Margin="{StaticResource PropertiesMargin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="File Size:" />
+                <TextBlock Grid.Column="1">
+                    <Run Text="{Binding Selection.Decision.Issue.File.Length, Converter={StaticResource FormatBytesConverter}, Mode=OneWay}" />
+                    <Run Text="(" /><Run Text="{Binding Selection.Decision.Issue.File.Length, Mode=OneWay}" />
+                    <Run Text="Bytes)" />
+                </TextBlock>
+            </Grid>
+            <Grid Margin="{StaticResource PropertiesMargin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Created On:" />
+                <TextBlock Grid.Column="1" Text="{Binding Selection.Decision.Issue.File.FileCreatedOn}" />
+            </Grid>
+            <Grid Margin="{StaticResource PropertiesMargin}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="{StaticResource PropertiesLabelWidth}" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Photo:" />
+                <ContentControl Grid.Column="1">
+                    <ContentControl.Style>
+                        <Style TargetType="ContentControl">
+                            <Setter Property="Content">
+                                <Setter.Value>
+                                    <TextBlock>
+                                        <Run Text="{Binding Selection.Decision.Issue.File.PhotoProperties.Width, Mode=OneWay}" />
+                                        <Run Text="x" />
+                                        <Run Text="{Binding Selection.Decision.Issue.File.PhotoProperties.Height, Mode=OneWay}" />
+                                        <Run Text="Pixel" />
+                                    </TextBlock>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding Selection.Decision.Issue.File.PhotoProperties}" Value="{x:Null}">
+                                    <Setter Property="Content">
+                                        <Setter.Value>
+                                            <TextBlock Foreground="#d35400" Text="No Photo detected" />
+                                        </Setter.Value>
+                                    </Setter>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ContentControl.Style>
+                </ContentControl>
+            </Grid>
+        </StackPanel>
+        <StackPanel Margin="16" Orientation="Vertical">
+            <TextBlock FontSize="16" Text="Operations" />
+            <ItemsControl ItemsSource="{Binding Selection.Decision.Operations}">
+                <ItemsControl.Resources>
+                    <DataTemplate DataType="{x:Type models:MoveFileOperation}">
+                        <Grid Margin="0,4,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ContentControl>
+                                <ContentControl.Style>
+                                    <Style TargetType="ContentControl">
+                                        <Setter Property="Content" Value="{StaticResource FileDestinationIcon}" />
+                                        <Style.Triggers>
+                                            <MultiDataTrigger>
+                                                <MultiDataTrigger.Conditions>
+                                                    <Condition Binding="{Binding File.IsRelativeFilename}" Value="false" />
+                                                    <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType=ItemsControl}, Path=DataContext.DecisionContext.RemoveFilesFromOutside}" Value="false" />
+                                                </MultiDataTrigger.Conditions>
+                                                <Setter Property="Content" Value="{StaticResource CopyIcon}" />
+                                            </MultiDataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </ContentControl.Style>
+                            </ContentControl>
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="8,0,0,0"
+                                TextWrapping="Wrap">
+                                <Run Foreground="#d35400" Text="{Binding File.Filename, Mode=OneWay}" />
+                                <Run Text="to" />
+                                <Run Foreground="#2980b9" Text="{Binding TargetPath, Mode=OneWay}" />
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type models:DeleteFileOperation}">
+                        <Grid Margin="0,4,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ContentControl Content="{StaticResource CancelIcon}" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="8,0,0,0"
+                                Text="{Binding File.Filename}"
+                                TextWrapping="Wrap" />
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.Resources>
+            </ItemsControl>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
