add duplicate files assistant, doing things better

--- a/src/PhotoFolder.Wpf/Views/DecisionAssistantDialog.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionAssistantDialog.xaml
@@ -18,6 +18,9 @@
             <DataTemplate DataType="{x:Type models:InvalidLocationFileDecisionViewModel}">
                 <ContentControl mvvm:RegionManager.RegionContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.Context}" mvvm:RegionManager.RegionName="{x:Static wpf:RegionNames.InvalidLocationDecision}" />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type models:DuplicateFileDecisionViewModel}">
+                <ContentControl mvvm:RegionManager.RegionContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.Context}" mvvm:RegionManager.RegionName="{x:Static wpf:RegionNames.DuplicateFilesDecision}" />
+            </DataTemplate>
         </ContentControl.Resources>
     </ContentControl>
 </UserControl>
