--- a/src/PhotoFolder.Wpf/Views/DecisionManagerDialog.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionManagerDialog.xaml
@@ -2,6 +2,7 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionManagerDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converter="clr-namespace:PhotoFolder.Wpf.Converter"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
@@ -16,8 +17,8 @@
         <Style TargetType="Window">
             <Setter Property="ResizeMode" Value="CanResize" />
             <Setter Property="SizeToContent" Value="Manual" />
-            <Setter Property="Height" Value="720" />
-            <Setter Property="Width" Value="1280" />
+            <Setter Property="Height" Value="600" />
+            <Setter Property="Width" Value="1100" />
         </Style>
     </prism:Dialog.WindowStyle>
     <Grid>
@@ -29,28 +30,8 @@
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
-                <ColumnDefinition Width="1">
-                    <ColumnDefinition.Style>
-                        <Style TargetType="ColumnDefinition">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Context.SelectedIssue}" Value="{x:Null}">
-                                    <Setter Property="Width" Value="0" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ColumnDefinition.Style>
-                </ColumnDefinition>
-                <ColumnDefinition Width="*">
-                    <ColumnDefinition.Style>
-                        <Style TargetType="ColumnDefinition">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Context.SelectedIssue}" Value="{x:Null}">
-                                    <Setter Property="Width" Value="0" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ColumnDefinition.Style>
-                </ColumnDefinition>
+                <ColumnDefinition Width="1" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <ContentControl prism:RegionManager.RegionContext="{Binding Context}" prism:RegionManager.RegionName="{x:Static wpf:RegionNames.DecisionManagerList}" />
             <GridSplitter
