--- a/src/PhotoFolder.Wpf/Views/DecisionManagerMenuView.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionManagerMenuView.xaml
@@ -37,5 +37,6 @@
                 IsCheckable="True"
                 IsChecked="{Binding DecisionContext.RemoveFilesFromOutside}" />
         </MenuItem>
+        <MenuItem Header="Review and execute" Icon="{StaticResource RunIcon}" />
     </Menu>
 </UserControl>
