--- a/src/PhotoFolder.Wpf/Views/DecisionAssistantDialog.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionAssistantDialog.xaml
@@ -21,6 +21,9 @@
             <DataTemplate DataType="{x:Type models:DuplicateFileDecisionViewModel}">
                 <ContentControl mvvm:RegionManager.RegionContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.Context}" mvvm:RegionManager.RegionName="{x:Static wpf:RegionNames.DuplicateFilesDecision}" />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type models:SimilarFileDecisionViewModel}">
+                <ContentControl mvvm:RegionManager.RegionContext="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=DataContext.Context}" mvvm:RegionManager.RegionName="{x:Static wpf:RegionNames.SimilarFilesDecision}" />
+            </DataTemplate>
         </ContentControl.Resources>
     </ContentControl>
 </UserControl>
