--- a/src/PhotoFolder.Wpf/Views/DecisionDuplicateFilesView.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionDuplicateFilesView.xaml
@@ -2,15 +2,22 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionDuplicateFilesView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:PhotoFolder.Wpf.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:listViewLayoutManager="clr-namespace:PhotoFolder.Wpf.Extensions.ListViewLayoutManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:viewModels="clr-namespace:PhotoFolder.Wpf.ViewModels"
+    Width="600"
+    Height="300"
     d:DataContext="{d:DesignInstance viewModels:DecisionDuplicateFilesViewModel}"
     d:DesignHeight="450"
-    d:DesignWidth="800" Width="600" Height="300"
+    d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <converters:IsStringNotEmptyConverter x:Key="IsStringNotEmptyConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -22,12 +29,10 @@
             <Run>
                 <Run.Style>
                     <Style TargetType="Run">
+                        <Setter Property="Text" Value="It is safe to keep one of these files in the photo directory only - no information will be lost." />
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding Decision.Issue.File.IsRelativeFilename}" Value="false">
+                            <DataTrigger Binding="{Binding Decision.Issue.File.RelativeFilename}" Value="{x:Null}">
                                 <Setter Property="Text" Value="As you are importing one of these files, it is highly recommended that you don't do so." />
-                            </DataTrigger>
-                            <DataTrigger Binding="{Binding Decision.Issue.File.IsRelativeFilename}" Value="true">
-                                <Setter Property="Text" Value="It is safe to keep one of these files in the photo directory only - no information will be lost." />
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -36,6 +41,7 @@
         </TextBlock>
         <ListView
             Grid.Row="1"
+            listViewLayoutManager:ListViewLayoutManager.Enabled="True"
             ItemsSource="{Binding Files}"
             SelectionMode="Multiple">
             <ListView.View>
@@ -47,15 +53,32 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Value.RelativeFilename}" Header="File" />
-                    <GridViewColumn Width="120" Header="Hash">
+                    <GridViewColumn listViewLayoutManager:ProportionalColumn.Width="1" Header="File">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock>
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Text" Value="{Binding Value.RelativeFilename}" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Value.RelativeFilename}" Value="{x:Null}">
+                                                    <Setter Property="Text" Value="{Binding Value.Filename}" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Width="80" Header="Hash">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Value.Hash}" TextTrimming="CharacterEllipsis" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
-                    <GridViewColumn DisplayMemberBinding="{Binding Value.IsRelativeFilename}" Header="In Photo Directory" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Value.RelativeFilename, Converter={StaticResource IsStringNotEmptyConverter}}" Header="In Photo Directory" />
                 </GridView>
             </ListView.View>
             <ListView.ItemContainerStyle>
