--- a/src/PhotoFolder.Wpf/Views/DecisionSimilarFilesView.xaml
+++ b/src/PhotoFolder.Wpf/Views/DecisionSimilarFilesView.xaml
@@ -2,6 +2,7 @@
     x:Class="PhotoFolder.Wpf.Views.DecisionSimilarFilesView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:PhotoFolder.Wpf.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mvvm="http://prismlibrary.com/"
@@ -14,7 +15,7 @@
     mvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
     <UserControl.Resources>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:FormatBytesConverter x:Key="FormatBytesConverter" />
     </UserControl.Resources>
     <ListView
         Margin="4"
@@ -61,9 +62,49 @@
                                     </Style>
                                 </ContentControl.Style>
                             </ContentControl>
-                            <Grid Visibility="{Binding File.Value.IsRelativeFilename, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                            <Border
+                                Margin="8,0,0,0"
+                                Padding="4,2"
+                                Background="#27ae60"
+                                BorderBrush="#27ae60"
+                                BorderThickness="1"
+                                CornerRadius="2">
+                                <Border.Style>
+                                    <Style TargetType="Border">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding File.Value.RelativeFilename}" Value="{x:Null}">
+                                                <Setter Property="Visibility" Value="Visible" />
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                                <TextBlock Foreground="White" Text="Import" />
+                            </Border>
                         </StackPanel>
-                        <TextBlock Margin="0,4,0,0" Text="{Binding File.Value.RelativeFilename}" />
+                        <TextBlock Margin="0,4,0,0" HorizontalAlignment="Center">
+                            <TextBlock.Style>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="Text" Value="{Binding File.Value.RelativeFilename}" />
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding File.Value.RelativeFilename}" Value="{x:Null}">
+                                            <Setter Property="Text" Value="{Binding File.Value.Filename}" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                        </TextBlock>
+                        <TextBlock
+                            Margin="0,4,0,0"
+                            HorizontalAlignment="Center"
+                            Foreground="{StaticResource MahApps.Brushes.Gray3}">
+                            <Run Text="Size: " />
+                            <Run FontWeight="SemiBold" Text="{Binding File.Value.Length, Mode=OneWay, Converter={StaticResource FormatBytesConverter}}" /><Run Text="," />
+                            <Run Text="Dimensions: " />
+                            <Run FontWeight="SemiBold" Text="{Binding File.Value.PhotoProperties.Width, Mode=OneWay}" /><Run FontWeight="SemiBold" Text="px" />
+                            <Run Text="x" />
+                            <Run FontWeight="SemiBold" Text="{Binding File.Value.PhotoProperties.Height, Mode=OneWay}" /><Run FontWeight="SemiBold" Text="px" />
+                        </TextBlock>
                     </StackPanel>
                 </StackPanel>
             </DataTemplate>
